fix for icon position not aligned to the center

--- a/mime-icons.scss
+++ b/mime-icons.scss
@@ -639,6 +639,7 @@ $icon-list:("3dm", "", $settings),
 
   .ico {
     position:relative;
+    text-align: center;
 
     &:before{
       position: absolute;
